Alterações de apresentação de nomes. Ex.: Aula de Língua Portuguesa para Português.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> Aula de Matemática <br><br> CMM 2019/2020 | Correção de Prova <br><br>Turma Avançada</p>
+                        <p class="card-text"> Matemática <br><br> CMM 2019/2020 <br><br>Turma Avançada</p>
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> Aula de Português <br><br> CMCG | Modos Verbais <br><br>Turma Iniciante</p>
+                        <p class="card-text"> Português <br><br> Modos Verbais <br><br>Turma Iniciante</p>
                     </div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório IFMS</h6>
-                        <p class="card-text"> Aula de Matemática <br><br>Teorema de Tales</p>
+                        <p class="card-text"> Matemática <br><br>Teorema de Tales</p>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">África - Ensino Médio</h6>
-                        <p class="card-text"> Aula de Matemática <br><br> Produtos Notáveis</p>
+                        <p class="card-text"> Matemática <br><br> Produtos Notáveis</p>
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório IFMS</h6>
-                        <p class="card-text"> Aula de Matemática <br><br>Porcentagem</p>
+                        <p class="card-text"> Matemática <br><br>Porcentagem</p>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                     gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> Aula de Matemática <br><br> CMF 2020/2021 | Correção de Prova <br><br>Turma Iniciante</p>
+                        <p class="card-text"> Matemática <br><br> CMF 2020/2021 <br><br>Turma Iniciante</p>
                     </div>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                     gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text">Aula de Matemática <br><br> CMB 2018/2019 | Correção de Prova <br><br>Turma Avançada</p>
+                        <p class="card-text">Matemática <br><br> CMB 2018/2019 <br><br>Turma Avançada</p>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                      gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">África - Ensino Médio</h6>
-                        <p class="card-text"> Aula de Matemática <br><br> Funções</p>
+                        <p class="card-text"> Matemática <br><br> Funções</p>
                     </div>
                 </div>
             </div>
@@ -248,7 +248,7 @@
                     allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> Aula de Língua Portuguesa <br><br> CMB 2018/2019 | Correção de Prova <br><br>Turma Avançada</p>
+                        <p class="card-text"> Português <br><br> CMB 2018/2019 <br><br>Turma Avançada</p>
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                     allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório IFMS</h6>
-                        <p class="card-text">Aula de Língua Portuguesa <br><br>Interpretação de Texto</p>
+                        <p class="card-text">Português <br><br>Interpretação de Texto</p>
                     </div>
                 </div>
             </div>
@@ -271,7 +271,7 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text">Aula de Língua Portuguesa <br><br> CMB 2006/2007 | Correção de Prova <br><br>Turma Iniciante</p>
+                        <p class="card-text">Português <br><br> CMB 2006/2007 <br><br>Turma Iniciante</p>
                     </div>
                 </div>
             </div>
@@ -282,7 +282,7 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> Aula de Língua Portuguesa <br><br> CMBH 16/17 | Correção de Prova <br><br>Turma Avançada</p>
+                        <p class="card-text"> Português <br><br> CMBH 2016/2017 <br><br>Turma Avançada</p>
                     </div>
                 </div>
             </div>
