Retirado o 'Voltar para o topo' das arrow-alt-circle-up.

--- a/espiritismo.html
+++ b/espiritismo.html
@@ -177,7 +177,7 @@
       </div>
     </footer>
     <div style="position:fixed; bottom:0px; right:30px;">
-      <a href="#" title="Voltar para o topo">Voltar para o topo<i class="fas fa-arrow-alt-circle-up"></i></a>
+      <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </div>
   </body>
   </html>
