--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             </div>
           </footer>
     </div>
-    <div style="position:fixed; bottom:0px; left:30px;">
+    <div style="position:fixed; bottom:0px; right:30px;">
         <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
     </div>
 </body>
