--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -184,6 +184,6 @@
     </div>
   </footer>
   <div style="position:fixed; bottom:0px; right:30px;">
-    <a href="#" title="Voltar para o topo">Voltar para o topo<i class="fas fa-arrow-alt-circle-up"></i></a>
+    <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
 </body>
 </html>
