Incluído o hotsite com banners.

--- a/africa.html
+++ b/africa.html
@@ -82,7 +82,7 @@
       </div>
     </div>
   </div>
-  <footer>
+  <footer class="footer">
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
@@ -105,15 +105,14 @@
           <hr>
           <h6>Tópicos</h6>
           <hr>
-          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
           <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
-          <p><a href="ajuda.html">Ajuda</a></p>
-          <p><a href="missao.html">Missão</a></p>
-          <p><a href="quem-somos.html">Quem Somos</a></p>
-          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
+          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
           <p><a href="colaboradores.html">Colaboradores</a></p>
+          <p><a href="quem-somos.html">Quem Somos</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <p></p>
+          <p><a href="missao.html">Missão</a></p>
+          <p><a href="ajuda.html">Ajuda</a></p>
+          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
         </div>
       </div>
     </div>
