--- a/hotsite-inscricoes-cm.html
+++ b/hotsite-inscricoes-cm.html
@@ -67,7 +67,19 @@
     <p class="blocktext"></p>
     <hr>
   </div>
-  <footer>
+  <div class="col-12">
+    <h6 class="blog">Veja também</h6>
+    <hr>
+  </div>
+  <div class="row text-center padding"> <!-- container-fluid padding --> <!-- row text-center padding -->   
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+      <a href="hotsite-edital-cm.html"><img src="./img/min-edital-na-integra.jpg" class="hotsite" alt=""></a>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+      <a href="hotsite-resumo-edital.html"><img src="./img/min-edital-cm-resumido.jpg" class="hotsite" alt=""></a>
+    </div>
+  </div>
+  <footer class="footer">
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
@@ -90,15 +102,14 @@
           <hr>
           <h6>Tópicos</h6>
           <hr>
-          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
           <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
-          <p><a href="ajuda.html">Ajuda</a></p>
-          <p><a href="missao.html">Missão</a></p>
-          <p><a href="quem-somos.html">Quem Somos</a></p>
-          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
+          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
           <p><a href="colaboradores.html">Colaboradores</a></p>
+          <p><a href="quem-somos.html">Quem Somos</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <p></p>
+          <p><a href="missao.html">Missão</a></p>
+          <p><a href="ajuda.html">Ajuda</a></p>
+          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
         </div>
       </div>
     </div>
