--- a/hotsite.html
+++ b/hotsite.html
@@ -48,26 +48,24 @@
       </div>
     </div>
   </nav>
-  <div class="p-3 mb-2 bg-light text-dark">
-    <p class="blocktext">Campo Grande, 9 de agosto de 2021</p>
-    <h6 class="blog">Exército divulga edital do Concurso para os Colégios Militares</h6>
-    <hr>
-    <p class="blocktext">O Departamento de Educação e Cultura do Exército (DECEX), publicou no Diário Oficial da União (DOU), nesta quarta-feira (04/08/2021), o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary">edital do Concurso</a> para os Colégios Militares que fazem parte do Sistema Colégio Militar do Brasil (SCMB).</p>
-    <p class="blocktext"><strong>O período de inscrições será de 17 de agosto a 24 de setembro de 2021</strong>, então é importante ficar atento.  Nós, do Instituto Ser Integral, publicaremos as novidades e etapas do concurso aqui no site e manteremos os alunos informados também nos grupos de Whatsapp.</p>
-    <p class="blocktext">É importante que os pais ou responsáveis acessem o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary">edital do Concurso</a>, bem como a <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">página oficial</a> do Colégio Militar de Campo Grande (CMCG).</p>
-    <p class="blocktext">Ano passado, o Instituto aprovou dois alunos, sendo uma no CMCG e outro no Colégio Militar de Belém (CMBel).</p>
-    <p class="blocktext"><strong>A prova escrita está prevista para o dia 17 de outubro de 2021.</strong></p>
-    <p class="blocktext">Em breve, divulgaremos mais informações.</p>
-    <hr>
-    <p class="blocktext">Fonte: <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">Colégio Militar de Campo Grande</a> e <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary"> Diário Oficial da União</a></p>
-    <hr>
-    <p class="blocktext">Confira os postos de inscrição, o número de vagas e o site do Colégio Militar da sua região:</p>
-    <p class="blocktext"><iframe src="https://drive.google.com/file/d/1RDCdlomvrifW_QLbbjycKIB-QNik-w62/preview" id="form-edital" allow="autoplay" frameborder="1"></iframe></p>
-    <hr>
-    <p class="blocktext"></p>
-    <hr>
+  <div class="container-fluid padding">
+    <div class="col-12">
+      <h6 class="blog">Confira aqui todas as notícias sobre o Concurso para os Colégios Militares</h6>
+      <hr>
+    </div>
+    <div class="row text-center padding"> <!-- container-fluid padding --> <!-- row text-center padding -->   
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <a href="hotsite-inscricoes-cm.html"><img src="./img/min-hotsite-cm.jpg" class="hotsite" alt=""></a>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <a href="hotsite-edital-cm.html"><img src="./img/min-edital-na-integra.jpg" class="hotsite" alt=""></a>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <a href="hotsite-resumo-edital.html"><img src="./img/min-edital-cm-resumido.jpg" class="hotsite" alt=""></a>
+      </div>
+    </div>
   </div>
-  <footer>
+  <footer class="footer">
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
@@ -90,15 +88,14 @@
           <hr>
           <h6>Tópicos</h6>
           <hr>
-          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
           <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
-          <p><a href="ajuda.html">Ajuda</a></p>
-          <p><a href="missao.html">Missão</a></p>
-          <p><a href="quem-somos.html">Quem Somos</a></p>
-          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
+          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
           <p><a href="colaboradores.html">Colaboradores</a></p>
+          <p><a href="quem-somos.html">Quem Somos</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <p></p>
+          <p><a href="missao.html">Missão</a></p>
+          <p><a href="ajuda.html">Ajuda</a></p>
+          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
         </div>
       </div>
     </div>
