Incluídos os banners na tela inicial. Deletado o hotsite-inscrições.

--- a/hotsite-resumo-edital.html
+++ b/hotsite-resumo-edital.html
@@ -219,7 +219,7 @@
       <a href="hotsite-inscricoes-cm.html"><img src="./img/min-hotsite-cm.jpg" class="hotsite" alt=""></a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-      <a href="hotsite-edital-cm.html"><img src="./img/min-edital-na-integra.jpg" class="hotsite" alt=""></a>
+      <a href="hotsite.html"><img src="./img/min-edital-na-integra.jpg" class="hotsite" alt=""></a>
     </div>
   </div>
   <footer class="footer">
