--- a/index.html
+++ b/index.html
@@ -64,33 +64,25 @@
             <li data-target="#slides" data-slide-to="0" class="active"></li>
             <li data-target="#slides" data-slide-to="1"></li>
             <li data-target="#slides" data-slide-to="2"></li>
+            <li data-target="#slides" data-slide-to="3"></li>
+            <li data-target="#slides" data-slide-to="4"></li>
         </ul>
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="hotsite-inscricoes-cm.html"><img src="img/banner-hotsite-cm.jpg" class="img-fluid"></a> 
-                <!-- <div class="carousel-caption"> -->
-                    <!-- <h1 class="display-2"></h1> -->
-                    <!-- <h4>Preparatório Colégio Militar</h4> -->
-                    <!-- <a href="hotsite-inscricoes-cm.html" class="btn btn-light active btn-sm" role="button" aria-pressed="true" title="Acesse o HotSite">HotSite</a> -->
-                    <!-- <a href="turmaavancada.html" class="btn btn-danger btn-sm" role="button" aria-pressed="true" title="Ver vídeos da Turma Avançada">TURMA AVANÇADA</a> -->
-                <!-- </div> -->
+                <a href="hotsite.html"><img src="./img/banner-hotsite-cm.jpg" class="img-fluid"></a> 
+            </div>
+            <div class="carousel-item">
+                <a href="hotsite-edital-cm.html"><img src="./img/edital-cm-na-integra.jpg" class="img-fluid"></a> 
+            </div>
+            <div class="carousel-item">
+                <a href="hotsite-resumo-edital.html"><img src="./img/banner-resumo-edital-cm.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
                 <a href="prep-if.html"><img src="./img/logo_IF_2021.png" class="img-fluid" alt="Preparatório IFMS"></a>
-                <!-- <div class="carousel-caption">
-                    <h1 class="display-2"></h1>
-                    <h4>Preparatório</h4>
-                    <a href="prep-if.html" class="btn btn-outline-success btn-sm" role="button" title="Ver vídeos do Preparatório IFMS">CLIQUE AQUI</a>
-                </div> -->
             </div>
             <div class="carousel-item">
                 <a href="espiritismo.html"><img src="./img/cosmos2.png" class="img-fluid" alt="Ensino Religioso"></a>
-                <!-- <div class="carousel-caption">
-                    <h1 class="display-2"></h1>
-                    <h4>Vídeos Fraternos</h4>
-                    <a href="espiritismo.html" class="btn btn-primary btn-sm" role="button" title="Clique aqui">VER VÍDEOS</a>
-                </div> -->
             </div>
         </div>
         <!-- Left and right controls -->
