--- a/hotsite-edital-cm.html
+++ b/hotsite-edital-cm.html
@@ -67,7 +67,7 @@
       <a href="hotsite-resumo-edital.html"><img src="./img/min-edital-cm-resumido.jpg" class="hotsite" alt=""></a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-      <a href="hotsite-inscricoes-cm.html"><img src="./img/min-hotsite-cm.jpg" class="hotsite" alt=""></a>
+      <a href="hotsite.html"><img src="./img/min-hotsite-cm.jpg" class="hotsite" alt=""></a>
     </div>
   </div>
   <footer class="footer">
