Destacada a data da prova escrita.

--- a/hotsite-resumo-edital.html
+++ b/hotsite-resumo-edital.html
@@ -91,8 +91,8 @@
             </tr>
             <tr>
                 <th scope="row">5</th>
-                <td>Data da Prova Escrita</td>
-                <td>17 de outubro de 2021.</td>
+                <td><strong>Data da Prova Escrita</strong></td>
+                <td><strong>17 de outubro de 2021.</strong></td>
             </tr>
             <tr>
                 <th scope="row">6</th>
