--- a/hotsite.html
+++ b/hotsite.html
@@ -49,11 +49,16 @@
     </div>
   </nav>
   <div class="p-3 mb-2 bg-light text-dark">
+    <p class="blocktext"><i>(Atualizado em 16/08/2021)</i></p>
+    <hr>
+    <p class="blocktext">Estão abertas as inscrições para o Concurso do Colégio Militar, conforme matéria publicada em 09 de agosto de 2021.</p>
+    <p class="blocktext">Os Postos de Inscrição estão listados abaixo.</p>
+    <p class="blocktext">Confira o artigo publicado na íntegra.</p>
+    <hr>
     <p class="blocktext">Campo Grande, 9 de agosto de 2021</p>
     <h6 class="blog">Exército divulga edital do Concurso para os Colégios Militares</h6>
-    <hr>
     <p class="blocktext">O Departamento de Educação e Cultura do Exército (DECEX), publicou no Diário Oficial da União (DOU), nesta quarta-feira (04/08/2021), o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary">edital do Concurso</a> para os Colégios Militares que fazem parte do Sistema Colégio Militar do Brasil (SCMB).</p>
-    <p class="blocktext"><strong>O período de inscrições será de 17 de agosto a 24 de setembro de 2021</strong>, então é importante ficar atento.  Nós, do Instituto Ser Integral, publicaremos as novidades e etapas do concurso aqui no site e manteremos os alunos informados também nos grupos de Whatsapp.</p>
+    <p class="blocktext"><strong>O período de inscrições será de 18 de agosto a 24 de setembro de 2021</strong>, então é importante ficar atento.  Nós, do Instituto Ser Integral, publicaremos as novidades e etapas do concurso aqui no site e manteremos os alunos informados também nos grupos de Whatsapp.</p>
     <p class="blocktext">É importante que os pais ou responsáveis acessem o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary">edital do Concurso</a>, bem como a <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">página oficial</a> do Colégio Militar de Campo Grande (CMCG).</p>
     <p class="blocktext">Ano passado, o Instituto aprovou dois alunos, sendo uma no CMCG e outro no Colégio Militar de Belém (CMBel).</p>
     <p class="blocktext"><strong>A prova escrita está prevista para o dia 17 de outubro de 2021.</strong></p>
