--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="hotsite.html"><img src="./img/banner-hotsite-cm.jpg" class="img-fluid"></a> 
+                <a href="hotsite.html"><img src="./img/cm-inscricoes-abertas.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
                 <a href="hotsite-edital-cm.html"><img src="./img/edital-cm-na-integra.jpg" class="img-fluid"></a> 
