Incluídas informações, links e o Manual do Aluno, relativos à inscrição no concurso do CM.

--- a/hotsite.html
+++ b/hotsite.html
@@ -51,9 +51,14 @@
   <div class="p-3 mb-2 bg-light text-dark">
     <p class="blocktext"><i>(Atualizado em 16/08/2021)</i></p>
     <hr>
-    <p class="blocktext">Estão abertas as inscrições para o Concurso do Colégio Militar, conforme matéria publicada em 09 de agosto de 2021.</p>
-    <p class="blocktext">Os Postos de Inscrição estão listados abaixo.</p>
-    <p class="blocktext">Confira o artigo publicado na íntegra.</p>
+    <p class="blocktext"><strong>Estão abertas as inscrições para o Concurso do Colégio Militar</strong>, conforme matéria publicada em 09 de agosto de 2021.</p>
+    <p class="blocktext">As inscrições podem ser feitas nos postos listados abaixo ou no <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">site do CM</a>.</p>
+    <p class="blocktext">Caso queiram, <strong>os pais podem realizar a inscrição online</strong>, clicando <a href="https://cmcg.perseuconcursos.com.br/login" target="_blank" class="text-primary">aqui.</a> Basta cadastrar o CPF e o RG do responsável, sendo que este último servirá de senha para o acesso.</p>
+    <p class="blocktext">A leitura do <strong>Manual do Aluno</strong> é importantíssima, pois ela contém detalhes sobre o dia da realização da prova.</p>
+    <hr>
+    <p class="blocktext"><iframe src="https://drive.google.com/file/d/1qPmYgaTBtfvHOnOY9TIBvwAQ3Gneczcv/preview" id="form-edital" allow="autoplay" frameborder="1"></iframe></p>
+    <hr>
+    <p class="blocktext"><strong>Confira o artigo publicado em 09 de agosto, na íntegra:</strong></p>
     <hr>
     <p class="blocktext">Campo Grande, 9 de agosto de 2021</p>
     <h6 class="blog">Exército divulga edital do Concurso para os Colégios Militares</h6>
