Correção ortográfica pontual.

--- a/hotsite.html
+++ b/hotsite.html
@@ -54,7 +54,7 @@
     <p class="blocktext"><strong>Estão abertas as inscrições para o Concurso do Colégio Militar</strong>, conforme matéria publicada em 09 de agosto de 2021.</p>
     <p class="blocktext">As inscrições podem ser feitas nos postos listados abaixo ou no <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">site do CM</a>.</p>
     <p class="blocktext">Caso queiram, <strong>os pais podem realizar a inscrição online</strong>, clicando <a href="https://cmcg.perseuconcursos.com.br/login" target="_blank" class="text-primary">aqui.</a> Basta cadastrar o CPF e o RG do responsável, sendo que este último servirá de senha para o acesso.</p>
-    <p class="blocktext">A leitura do <strong>Manual do Aluno</strong> é importantíssima, pois ela contém detalhes sobre o dia da realização da prova.</p>
+    <p class="blocktext">A leitura do <strong>Manual do Aluno</strong> é importantíssima, pois ele contém detalhes sobre o dia da realização da prova.</p>
     <hr>
     <p class="blocktext"><iframe src="https://drive.google.com/file/d/1qPmYgaTBtfvHOnOY9TIBvwAQ3Gneczcv/preview" id="form-edital" allow="autoplay" frameborder="1"></iframe></p>
     <hr>
