--- a/hotsite-resumo-edital.html
+++ b/hotsite-resumo-edital.html
@@ -96,13 +96,13 @@
             </tr>
             <tr>
                 <th scope="row">6</th>
-                <td>Horário de abertura dos Portões</td>
-                <td>A ser definido no Manual do Aluno</td>
+                <td>Horário de abertura dos Portões (CMCG)</td>
+                <td><strong>6h30min (horário de Campo Grande).</strong><br><br>Os portões fecham às 8h</td>
             </tr>
             <tr>
                 <th scope="row">7</th>
                 <td>Horário de Início da Prova Escrita</td>
-                <td>A ser definido no Manual do Aluno</td>
+                <td>8h30min (horário de Campo Grande)</td>
             </tr>
             <tr>
                 <th scope="row">8</th>
