Destacado o horário da prova.

--- a/hotsite-resumo-edital.html
+++ b/hotsite-resumo-edital.html
@@ -102,7 +102,7 @@
             <tr>
                 <th scope="row">7</th>
                 <td>Horário de Início da Prova Escrita</td>
-                <td>8h30min (horário de Campo Grande)</td>
+                <td><strong>8h30min (horário de Campo Grande)</strong></td>
             </tr>
             <tr>
                 <th scope="row">8</th>
