Incluída a página 'Calendário de Aulas' com a tabela de horários da Turma Iniciante.

--- a/calendario-de-aulas.html
+++ b/calendario-de-aulas.html
@@ -48,13 +48,15 @@
       </div>
     </div>
   </nav>
-  <div>
+  <div class="container-fluid padding">
       <h6 class="blog">Calendário de Aulas - 2º Semestre de 2021</h6>
       <h6 class="blog">Colégio Militar - Turma Iniciante</h6>
-      <div class="p-3 mb-2 bg-light text-dark" id="showData">
-          
+      <div class="table" id="showData">
       </div>
-    </div>
+      <div class="container">
+        <p class="blocktext">* Em breve, incluiremos os horários das aulas da Turma Avançada e do IFMS.</p>
+      </div>
+  </div>
   
   <footer class="footer">
     <div class="container-fluid padding">
