--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <li data-target="#slides" data-slide-to="2"></li>
             <li data-target="#slides" data-slide-to="3"></li>
             <li data-target="#slides" data-slide-to="4"></li>
+            <li data-target="#slides" data-slide-to="5"></li>
         </ul>
         <!-- The slideshow -->
         <div class="carousel-inner">
@@ -77,6 +78,9 @@
             </div>
             <div class="carousel-item">
                 <a href="hotsite-resumo-edital.html"><img src="./img/banner-resumo-edital-cm.jpg" class="img-fluid"></a> 
+            </div>
+            <div class="carousel-item">
+                <a href="calendario-de-aulas.html"> <img src="./img/retorno-aulas.jpg" class="img-fluid"> </a>
             </div>
             <div class="carousel-item">
                 <a href="prep-if.html"><img src="./img/logo_IF_2021.png" class="img-fluid" alt="Preparatório IFMS"></a>
