--- a/calendario-de-aulas.html
+++ b/calendario-de-aulas.html
@@ -51,7 +51,7 @@
   <div class="container-fluid padding">
       <h6 class="blog">Calendário de Aulas - 2º Semestre de 2021</h6>
       <h6 class="blog">Colégio Militar - Turma Iniciante</h6>
-      <div class="table" id="showData">
+      <div class="table table-bordered table-striped" id="showData">
       </div>
       <div class="container">
         <p class="blocktext">* Em breve, incluiremos os horários das aulas da Turma Avançada e do IFMS.</p>
