--- a/hotsite-resumo-edital.html
+++ b/hotsite-resumo-edital.html
@@ -53,7 +53,7 @@
     <hr>
     <h6 class="blog">Tabela-Resumo do Edital do Concurso para os Colégios Militares</h6>
     <hr>
-    <table class="table table-bordered">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th scope="col">#</th>
