Incluídos os links de whatsapp na página Missão.

--- a/missao.html
+++ b/missao.html
@@ -51,6 +51,16 @@
   <div class="container">
     <h6 class="blog">Resumo do Estatuto e Missão</h6>
     <p class="blocktext">O <i>Instituto Ser Integral</i> é uma associação civil sem fins lucrativos, com sede em Campo Grande.</p>
+    <p class="blocktext">Ministramos cursos online gratuitos prepratórios para o colégio militar, escolas privadas de Campo Grande (MS) e Instituto Federal (IFMS).</p>
+    <p class="blocktext">Para acessar os grupos de Whatsapp, clique nos links abaixo:</p>
+    <p class="center">
+          <a href="https://chat.whatsapp.com/D8z2Xl6r5kg8bN6LfhdOWF" target="_blank" class="text-danger"><strong><i class="fab fa-whatsapp"></i></strong></a>
+          <a href="https://chat.whatsapp.com/D8z2Xl6r5kg8bN6LfhdOWF" target="_blank" class="text-danger"><strong>Colégio Militar</strong></a>
+    </p>
+    <p class="center">
+      <a href="https://chat.whatsapp.com/CjihrdajeN98E9DssU4k66"  target="_blank" class="text-success"><strong><i class="fab fa-whatsapp"></i></strong></a>
+      <a href="https://chat.whatsapp.com/CjihrdajeN98E9DssU4k66"  target="_blank" class="text-success"><strong>IFMS</strong></a>
+    </p>
     <p class="blocktext">Temos como objetivo a promoção social e educacional da população de baixa renda, mediante a adoção de iniciativas capazes de propiciar seu acesso a meios educacionais de melhor qualidade</p>
     <p class="blocktext">Nossa Missão:</p>
       <ol class="blocktext">
