--- a/calendario-de-aulas.html
+++ b/calendario-de-aulas.html
@@ -52,7 +52,7 @@
       <h6 class="blog">Calendário de Aulas - 2º Semestre de 2021</h6>
       <h6 class="blog">Colégio Militar - Turma Iniciante</h6>
       <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-auto">
           <div class="table table-responsive table-bordered table-striped" id="showData">
           </div>
         </div>
