--- a/hotsite-resumo-edital.html
+++ b/hotsite-resumo-edital.html
@@ -54,7 +54,7 @@
     <h6 class="blog">Tabela-Resumo do Edital do Concurso para os Colégios Militares</h6>
     <hr>
     <table class="table table-bordered table-striped">
-        <thead>
+        <thead class="table-primary">
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Evento</th>
