Inclúidos os links das Redes Sociais acima do rodapé (footer) da página inicial. Alterada a sequência dos links dos Tópicos.

--- a/africa.html
+++ b/africa.html
@@ -50,7 +50,7 @@
   </nav>
   <div class="container-fluid padding">
     <div class="row text-center padding">
-      <div class="col-12">
+      <div class="col-12 social">
         <h4>África - Ensino Médio</h4>
         <a href="https://www.youtube.com/channel/UCL-UZ2AEInx6QFmVs2eO2Tw" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
             <i class="fab fa-youtube"></i></a>
