--- a/calendario-de-aulas.html
+++ b/calendario-de-aulas.html
@@ -86,11 +86,11 @@
           <hr>
           <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
           <p><a href="material-de-apoio.html">Material de Apoio</a></p>
-          <p><a href="colaboradores.html">Colaboradores</a></p>
-          <p><a href="quem-somos.html">Quem Somos</a></p>
-          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <p><a href="missao.html">Missão</a></p>
           <p><a href="ajuda.html">Ajuda</a></p>
+          <p><a href="quem-somos.html">Quem Somos</a></p>
+          <p><a href="missao.html">Missão</a></p>
+          <p><a href="colaboradores.html">Colaboradores</a></p>
+          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
           <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
         </div>
       </div>
@@ -124,7 +124,7 @@
             var tr = table.insertRow(-1);//Linha da tabela
 
             for(var i = 0; i < col.length; i++){
-                var th = document.createElement("th");//Cabeçaho da tabela
+                var th = document.createElement("th");//Cabeçalho da tabela
                 th.innerHTML = col[i];
                 tr.appendChild(th);
             }
