--- a/espiritismo.html
+++ b/espiritismo.html
@@ -50,7 +50,7 @@
     </nav>
     <div class="container-fluid padding">
       <div class="row text-center padding">
-        <div class="col-12">
+        <div class="col-12 social">
           <a href="https://www.youtube.com/channel/UCR149qvxkUGEu_OIOZ5bYAA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
             <i class="fab fa-youtube"></i></a>
           <h2>Playlist de Estudo: Paulo e Estevão</h2>
@@ -165,11 +165,11 @@
             <hr>
             <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
             <p><a href="material-de-apoio.html">Material de Apoio</a></p>
-            <p><a href="colaboradores.html">Colaboradores</a></p>
-            <p><a href="quem-somos.html">Quem Somos</a></p>
-            <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-            <p><a href="missao.html">Missão</a></p>
             <p><a href="ajuda.html">Ajuda</a></p>
+            <p><a href="quem-somos.html">Quem Somos</a></p>
+            <p><a href="missao.html">Missão</a></p>
+            <p><a href="colaboradores.html">Colaboradores</a></p>
+            <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
             <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
           </div>
         </div>
