--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -50,7 +50,7 @@
   </nav>
   <div class="container-fluid padding">
     <div class="row text-center padding">
-      <div class="col-12">
+      <div class="col-12 social">
           <h4>Preparatório CM - Turma Avançada</h4>
           <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
               <i class="fab fa-youtube"></i></a>
@@ -172,11 +172,11 @@
           <hr>
           <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
           <p><a href="material-de-apoio.html">Material de Apoio</a></p>
-          <p><a href="colaboradores.html">Colaboradores</a></p>
-          <p><a href="quem-somos.html">Quem Somos</a></p>
-          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <p><a href="missao.html">Missão</a></p>
           <p><a href="ajuda.html">Ajuda</a></p>
+          <p><a href="quem-somos.html">Quem Somos</a></p>
+          <p><a href="missao.html">Missão</a></p>
+          <p><a href="colaboradores.html">Colaboradores</a></p>
+          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
           <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
         </div>
       </div>
