--- a/calendario-de-aulas.html
+++ b/calendario-de-aulas.html
@@ -57,6 +57,22 @@
           </div>
         </div>
       </div>
+      <h6 class="blog">Colégio Militar - Turma Avançada</h6>
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <table class="table table-responsive table-bordered table-striped">
+
+          </table>
+        </div>
+      </div>
+      <h6 class="blog">IFMS</h6>
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <table class="table table-responsive table-bordered table-striped">
+
+          </table>
+        </div>
+      </div>
       <div class="container">
         <p class="blocktext">* Em breve, incluiremos os horários das aulas da Turma Avançada e do IFMS.</p>
       </div>
