Informações da Versão: Incluído o site de informações para o processo seletivo da EGO. Correção pontual na página Colaboradores.

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -48,7 +48,7 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid padding"">
+  <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-12">
         <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfBVvyc2OwykE07J-Z96bhK57iwqQdO12y5c7lH6MF7UXIurA/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe></p>
