Atualização de versão de 16/09/2021: Incluído o banner de chamada para o Processo Seletivo para a Escola General Osório.

--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
             <li data-target="#slides" data-slide-to="3"></li>
             <li data-target="#slides" data-slide-to="4"></li>
             <li data-target="#slides" data-slide-to="5"></li>
+            <li data-target="#slides" data-slide-to="6"></li>
         </ul>
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <a href="inscricoes-ego.html"><img src="./img/EGO-2022_1200-285.jpg" class="img-fluid"></a> 
+            </div>
+            <div class="carousel-item">
                 <a href="hotsite.html"><img src="./img/cm-inscricoes-abertas.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
