Atualização de versão 5 de 16/09/2021: incluído o termo Colégio Militar acima do contador.

--- a/hotsite.html
+++ b/hotsite.html
@@ -49,6 +49,7 @@
     </div>
   </nav>
   <div class="p-3 mb-2 bg-light text-dark">
+    <h5 class="blocktext text-center">Colégio Militar</h5>
     <h5 class="blocktext text-center">Faltam...</h5>
     <h1 class="blocktext text-center text-primary" id="timer"></h1>
     <h5 class="blocktext text-center">...para o término das Inscrições!</h5>
