--- a/hotsite.html
+++ b/hotsite.html
@@ -50,9 +50,9 @@
   </nav>
   <div class="p-3 mb-2 bg-light text-dark">
     <h5 class="blocktext text-center">Colégio Militar</h5>
-    <h5 class="blocktext text-center">Faltam...</h5>
+    <h5 class="blocktext text-center">Faltam</h5>
     <h1 class="blocktext text-center text-primary" id="timer"></h1>
-    <h5 class="blocktext text-center">...para o término das Inscrições!</h5>
+    <h5 class="blocktext text-center">para o término das Inscrições!</h5>
     <p class="blocktext"><i>(Atualizado em 16/08/2021)</i></p>
     <hr>
     <p class="blocktext"><strong>Estão abertas as inscrições para o Concurso do Colégio Militar</strong>, conforme matéria publicada em 09 de agosto de 2021.</p>
