Atualização de versão de 20/09/2021: correção de apresentação do formulário de inscrição da EGO.

--- a/inscricoes-ego.html
+++ b/inscricoes-ego.html
@@ -48,20 +48,26 @@
       </div>
     </div>
   </nav>
-    <div class="p-3 mb-2 bg-light text-dark">
-      <p class="blocktext">Campo Grande, 16 de setembro de 2021</p>
-      <h6 class="blog">Processo Seletivo para a Escola General Osório</h6>
-      <h6 class="blog">Inscrições Abertas</h6>
-      <hr>
-      <p class="blocktext"><strong>Estão abertas as inscrições para o Processo Seletivo da Escola General Osório, em Campo Grande, MS.</strong></p>
-      <p class="blocktext">As inscrições podem ser feitas no formulário abaixo ou no <a href="http://egocg.com.br/matricula" target="_blank" class="text-primary">site da Escola</a>.</p>
-      <p class="blocktext"><strong>O conteúdo das provas pode ser consultado</strong> clicando <a href="http://egocg.com.br/ementas_provas" target="_blank" class="text-primary">aqui</a>, de acordo com a série/ano desejada(o).</p>
-      <p class="blocktext">A Escola enviará demais informações para o e-mail cadastrado no formulário de inscrições abaixo, até o dia <strong>29/09/2021</strong>, então é importante ficar atento.</p>
-      <hr>
-      <p class="blocktext"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffn4Rkz8tHIIl3I1mzosXj3V_CsfFJ1K0eqTQJEuyvJBZQNw/viewform?embedded=true" width="640" height="1370" id="form-edital" allow="autoplay" marginheight="0" marginwidth="0" frameborder="1"></iframe></p>
-      <hr>
-      <p class="blocktext">Fonte: <a href="http://egocg.com.br/" target="_blank" class="text-primary">Escola General Osório.</a></p>
-      <hr>
+    <div class="container"> <!-- class="p-3 mb-2 bg-light text-dark" -->
+      <div class="container-fluid padding">
+        <p class="blocktext">Campo Grande, 16 de setembro de 2021</p>
+        <h6 class="blog">Processo Seletivo para a Escola General Osório</h6>
+        <h6 class="blog">Inscrições Abertas</h6>
+        <hr>
+        <p class="blocktext"><strong>Estão abertas as inscrições para o Processo Seletivo da Escola General Osório, em Campo Grande, MS.</strong></p>
+        <p class="blocktext">As inscrições podem ser feitas no formulário abaixo ou no <a href="http://egocg.com.br/matricula" target="_blank" class="text-primary">site da Escola</a>.</p>
+        <p class="blocktext"><strong>O conteúdo das provas pode ser consultado</strong> clicando <a href="http://egocg.com.br/ementas_provas" target="_blank" class="text-primary">aqui</a>, de acordo com a série/ano desejada(o).</p>
+        <p class="blocktext">A Escola enviará demais informações para o e-mail cadastrado no formulário de inscrições abaixo, até o dia <strong>29/09/2021</strong>, então é importante ficar atento.</p>
+        <hr>
+        <div class="row text-center">
+          <div class="col-12">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffn4Rkz8tHIIl3I1mzosXj3V_CsfFJ1K0eqTQJEuyvJBZQNw/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay"></iframe>
+          </div>
+        </div>
+        <hr>
+        <p class="blocktext">Fonte: <a href="http://egocg.com.br/" target="_blank" class="text-primary">Escola General Osório.</a></p>
+        <hr>
+      </div>
     </div>
   <footer class="footer">
     <div class="container-fluid padding">
