Atualização de versão 2 de 20/09/2021: ajustados os tamanhos de todos os formulários Google Forms com o id form-edital icluído nas 'media-queries' do CSS.

--- a/inscricoes-ego.html
+++ b/inscricoes-ego.html
@@ -61,7 +61,7 @@
         <hr>
         <div class="row text-center">
           <div class="col-12">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffn4Rkz8tHIIl3I1mzosXj3V_CsfFJ1K0eqTQJEuyvJBZQNw/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay"></iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffn4Rkz8tHIIl3I1mzosXj3V_CsfFJ1K0eqTQJEuyvJBZQNw/viewform?embedded=true" id="form-edital" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay"></iframe>
           </div>
         </div>
         <hr>
