Atualização de versão de 28/09/2021: incluído timer para a prova do Colégio Militar.

--- a/hotsite.html
+++ b/hotsite.html
@@ -50,9 +50,9 @@
   </nav>
   <div class="p-3 mb-2 bg-light text-dark">
     <h5 class="blocktext text-center">Colégio Militar</h5>
-    <h5 class="blocktext text-center">Falta</h5>
+    <h5 class="blocktext text-center">Faltam</h5>
     <h1 class="blocktext text-center text-primary" id="timer"></h1>
-    <h5 class="blocktext text-center">para o término das Inscrições!</h5>
+    <h5 class="blocktext text-center">para o Concurso do Colégio Militar!</h5>
     <p class="blocktext"><i>(Atualizado em 16/08/2021)</i></p>
     <hr>
     <p class="blocktext"><strong>Estão abertas as inscrições para o Concurso do Colégio Militar</strong>, conforme matéria publicada em 09 de agosto de 2021.</p>
@@ -134,7 +134,7 @@
 </body>
 <script>
   // Set the date we're counting down to
-  var countDownDate = new Date("Sept 24, 2021 23:59:59").getTime();
+  var countDownDate = new Date("Oct 17, 2021 08:30:00").getTime();
 
   // Update the count down every 1 second
   var updateTimer = setInterval(function(){
@@ -152,7 +152,7 @@
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
     // Display the result in the element with id="timer"
-    document.getElementById("timer").innerHTML = days + " DIA " + hours + "h" + minutes + "min" + seconds + "s";
+    document.getElementById("timer").innerHTML = days + " Dias " + hours + "h" + minutes + "min" + seconds + "s";
 
     // If the count down is finished, write some text 
     if (distance < 0){
