Atualização de versão 2 de 28/09/2021: incluído banner de chamada para a prova do Colégio Militar.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="inscricoes-ego.html"><img src="./img/EGO-2022_1200-285.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
-                <a href="hotsite.html"><img src="./img/cm-inscricoes-abertas.jpg" class="img-fluid"></a> 
+                <a href="hotsite.html"><img src="./img/Data-Prova-CM.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
                 <a href="hotsite-edital-cm.html"><img src="./img/edital-cm-na-integra.jpg" class="img-fluid"></a> 
