--- a/hotsite.html
+++ b/hotsite.html
@@ -152,7 +152,7 @@
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
     // Display the result in the element with id="timer"
-    document.getElementById("timer").innerHTML = days + " Dias " + hours + "h" + minutes + "min" + seconds + "s";
+    document.getElementById("timer").innerHTML = days + " Dias ";
 
     // If the count down is finished, write some text 
     if (distance < 0){
