--- a/provas-e-simulados.html
+++ b/provas-e-simulados.html
@@ -51,6 +51,10 @@
       <h6 class="blog">Provas e Simulados</h6>
       <h6 class="blog">Preparatório CM - Turma Avançada</h6>
       <div class="row text-center">
+        <!-- Prova 74 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefesm-ys8x8LsoEv4M_VOXnrQhoarsIE6sg_cSah1TY0LEVw/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
+        </div>
         <!-- Prova 53 -->
         <div class="col-12">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVCkAmttzLcTds-DpaZ9njC8sTBZV38PLEsuY3uLzsMdsxCg/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
