--- a/provas-e-simulados.html
+++ b/provas-e-simulados.html
@@ -55,6 +55,30 @@
         <div class="col-12">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefesm-ys8x8LsoEv4M_VOXnrQhoarsIE6sg_cSah1TY0LEVw/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
         </div>
+        <!-- Prova 73 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsVOdj2FkrhrKMK3y7kxC9T-iHnl0RhofqJXnFpomDVAJOog/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
+        </div>
+        <!-- Prova 72 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmJiWmJEor2neMIBWpcq2kFVHiurGRMYqGtG0TzCCh_yh8Pg/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
+        </div>
+        <!-- Prova 71 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfLGukjo_NqZeHN0NwkRCoZavGGQvOb-UHctec4R6WtwerJKw/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
+        </div>
+        <!-- Prova 70 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefhBqEvKj8lACSu0pfPBEi2ee547nWXp_ki9OVWwBnZHiBKA/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
+        </div>
+        <!-- Prova 69 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc1oQaaI02EQ4HLMHoBH0YIW0fOC3V4BFKsgHh9NAykIJSc4Q/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
+        </div>
+        <!-- Prova 68 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/1rzH7XTKIhCvVqixjrtMy6hk7fNI4ASUw23C1mzkbA3M/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
+        </div>
         <!-- Prova 53 -->
         <div class="col-12">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVCkAmttzLcTds-DpaZ9njC8sTBZV38PLEsuY3uLzsMdsxCg/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay" id="form-edital"></iframe>
